--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-config-dimebox",
   "version": "1.0.0",
   "description": "JavaScript Style Guide",
-  "main": "./lib/index",
+  "main": "./server/javascript",
   "scripts": {
     "test": "true"
   },
@@ -12,7 +12,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb": "^15.0.1"
+    "eslint-config-airbnb": "^15.0.1",
+    "tslint-config-airbnb": "^5.2.1"
   },
   "peerDependencies": {
     "eslint": "^3.19.0",
